--- a/views/stories/index.hbs
+++ b/views/stories/index.hbs
@@ -6,7 +6,7 @@
   <div class="col s12 m4">
     <div class="card">
       <div class="card-image">
-
+        {{{editIcon user ../user _id}}}
       </div>
 
       <div class="card-content center-align">
