--- a/views/stories/edit.hbs
+++ b/views/stories/edit.hbs
@@ -2,7 +2,8 @@
 
 <div class="row">
 
-  <form action="/stories" method="POST" class="col s12">
+  <form action="/stories/{{story._id}}" method="POST" class="col s12">
+    <input type="hidden" name="_method" value="PUT">
 
     <div class="row">
       <div class="input-field">
